# fastapi-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.MD  alembic.ini  dev.env  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py
docker/: Dockerfile
src/: config.py  core_exceptions.py  database.py  handlers.py  main.py
src/auth/: dependencies.py  exceptions.py  routes.py  schemas.py  services.py
src/tests/: conftest.py  factories.py  test_auth.py  test_users.py
src/user/: crud.py  models.py  password.py  routers.py  schemas.py
src/worker/: __init__.py  tasks.py
tests/: factories.py  test_auth.py  test_users.py  utils.py
